--- a/doc/man3/OSSL_PARAM_int.pod
+++ b/doc/man3/OSSL_PARAM_int.pod
@@ -58,6 +58,8 @@ OSSL_PARAM_UNMODIFIED, OSSL_PARAM_modified, OSSL_PARAM_set_all_unmodified
 
  #define OSSL_PARAM_UNMODIFIED
 
+ #define OSSL_PARAM_is_empty(params)
+
  #define OSSL_PARAM_DEFN(key, type, addr, sz)    \
     { (key), (type), (addr), (sz), OSSL_PARAM_UNMODIFIED }
 
@@ -213,6 +215,9 @@ is created.
 OSSL_PARAM_construct_end() is a function that constructs the terminating
 L<OSSL_PARAM(3)> structure.
 
+OSSL_PARAM_is_empty() is a macro that returns 1 if the I<params> array is either
+NULL or contains only a terminating L<OSSL_PARAM(3)> structure.
+
 OSSL_PARAM_locate() is a function that searches an I<array> of parameters for
 the one matching the I<key> name.
 
@@ -322,6 +327,8 @@ no object matching I<key> exists in the I<array>.
 
 OSSL_PARAM_modified() returns 1 if the parameter was set and 0 otherwise.
 
+OSSL_PARAM_is_empty() returns 1 if I<params> is empty or 0 otherwise.
+
 All other functions return 1 on success and 0 on failure.
 
 =head1 NOTES
@@ -399,10 +406,11 @@ L<openssl-core.h(7)>, L<OSSL_PARAM(3)>
 =head1 HISTORY
 
 These APIs were introduced in OpenSSL 3.0.
+The macro OSSL_PARAM_is_empty() was added in OpenSSL 3.5.
 
 =head1 COPYRIGHT
 
-Copyright 2019-2023 The OpenSSL Project Authors. All Rights Reserved.
+Copyright 2019-2024 The OpenSSL Project Authors. All Rights Reserved.
 
 Licensed under the Apache License 2.0 (the "License").  You may not use
 this file except in compliance with the License.  You can obtain a copy
