fixup! Add macro for OSSL_PARAM_is_empty()

--- a/doc/man3/OSSL_PARAM_int.pod
+++ b/doc/man3/OSSL_PARAM_int.pod
@@ -17,6 +17,7 @@ OSSL_PARAM_construct_ulong, OSSL_PARAM_construct_BN,
 OSSL_PARAM_construct_utf8_string, OSSL_PARAM_construct_utf8_ptr,
 OSSL_PARAM_construct_octet_string, OSSL_PARAM_construct_octet_ptr,
 OSSL_PARAM_construct_end,
+OSSL_PARAM_is_empty,
 OSSL_PARAM_locate, OSSL_PARAM_locate_const,
 OSSL_PARAM_get_double, OSSL_PARAM_get_int, OSSL_PARAM_get_int32,
 OSSL_PARAM_get_int64, OSSL_PARAM_get_long, OSSL_PARAM_get_size_t,
